--- a/README.project.adoc
+++ b/README.project.adoc
@@ -1,4 +1,4 @@
-= Video quick build project
+= projectname
 :backend: asciidoctor
 :github-flavored:  // enables GitHub-specific features like tables, task lists, and fenced code blocks
 ifndef::env-github[:icons: font]
